# Complex

./: APPLICATION_GUIDE.md  Cargo.toml  README.md
benches/: latency_profiling.rs
examples/: ipc_coordination.rs  memory_profiling.rs  sensor_pipeline.rs
src/: lib.rs
src/debugging/: error_context.rs  mod.rs  profiling.rs
src/pipelines/: buffer_management.rs  mod.rs  sensor_ingestion.rs
src/systems/: ipc.rs  mod.rs  scheduling.rs  timing.rs
